--- a/TLP-R2S_demo.ipynb
+++ b/TLP-R2S_demo.ipynb
@@ -17,7 +17,7 @@
         "id": "a813022b-b513-400d-8c4b-a1e09bfeb98c"
       },
       "source": [
-        "# <center> <font color='blue'> **Transfer Learning of Global Precipitation from Reanalysis to Satellite Observations** <center>\n",
+        "# <center> <font color='blue'> **An Incremental Learning Framework Linking Reanalysis and Radar Data for Passive Microwave Precipitation Retrievals** <center>\n",
         "\n",
         "#### <center> <font color='balck'> Buddha Subedi, Mahyar Garshasbi, Ardeshir Ebtehaj <center>\n",
         "#### <center> Saint Anthony Falls Laboratory, Department of Civil Environmental and Geo- Engineering,\n",
@@ -25,7 +25,7 @@
         "#### <center> Date: May, 2025 (rev 01)\n",
         "\n",
         "---\n",
-        "<p align=\"justify\"> This notebook representes the results of an algorithm, called the Boosted Transfer Learning of global Precipitation from Reanalysis data to Satellite observations (TLP-R2S), a novel machine learning framework that leverages incremental training of an ensemble of boosted decision trees to map low-level precipitation characteristics from ESMs to high-level features captured by satellite active precipitation observations. Through a meta-learning approach, TLP-R2S integrates information from multiple spaceborne radars operating at Ka, Ku, and W bands, enabling improved accuracy of precipitation retrievals in both liquid and solid phases in observation-sparse regions and periods. Implementation for the passive microwave observations from the Global Precipitation Measurement (GPM) core observatory shows that TLP-R2S performs on par with existing rain retrieval algorithms and offers significant improvements in global snowfall estimation when benchmarked against GPM V07 data products, as well as CloudSat and ground-based radar observations over the Contiguous United States.\n",
+        "<p align=\"justify\"> This notebook representes the results of an algorithm, called the Boosted Transfer Learning of global Precipitation from Reanalysis data to Satellite observations (TLP-R2S), a novel machine learning framework based on an ensemble of extreme gradient-boosted decision trees that accommodates heterogeneous training data, with emphasis on using Cloud Profiling Radar (CPR) data for training. The algorithm is incrementally trained by combining pre-training on reanalysis precipitation with post-training on coincident Dual-frequency Precipitation Radar (DPR) rainfall and CPR snowfall observations to cope with satellite data sparsity. Applied to PMW retrievals from the Global Precipitation Measurement (GPM) Microwave Imager (GMI) and the Special Sensor Microwave Imager/Sounder (SSMIS), the proposed approach transfers prior information from reanalysis to posterior constraints from radar observations and employs a sequential detection–estimation strategy for precipitation phase and rate. The method substantially improves high-latitude snowfall retrievals, mitigating systematic biases in current GPM products, including Arctic overestimation and Antarctic underestimation. Validation against independent Multi-Radar Multi-Sensor (MRMS) data demonstrates enhanced precipitation phase detection and rate estimation relative to reanalysis-based retrievals and individual spaceborne radar observations, provided sufficient coincident radar data are available for training.\n",
         "\n",
         "This notebook is organized as follows. Section 1, describes the data including the GPM and CloudSat products as well as the ERA5 reanalysis data from the European Centre for Medium-Range Weather Forecasts (ECMWF). Section 2 describes the methodolgy for training the networks, and the last section provides an example for precipitation orbital retrieval using the proposed algorithm."
       ]
@@ -49,9 +49,19 @@
       "source": [
         "**1.1** **Data Description**\n",
         "\n",
-        "In this study, we considered coincidences of GMI and CPR from April 2014 to July 2019, and coincidences of GMI and DPR data in 2015 and 2023. Furthermore, ancillary information related to atmospheric conditions, surface types and topography are added to all coincidences using the [ERA5](https://www.ecmwf.int/en/forecasts/datasets/reanalysis-datasets/era5) reanalysis products -- available at spatial resolution of 31km and [GTOPO](https://www.usgs.gov/centers/eros/science/usgs-eros-archive-digital-elevation-global-30-arc-second-elevation-gtopo30) -- available at spatial resolution of 1km.\n",
+        "<span style=\"color:green;\"><b><i>1.1.1 Satellite and Reanalysis Input Data</i></b></span>\n",
         "\n",
-        "**Atmospheric Variables**\n",
+        "Brightness temperatures (TBs) from the SSMIS and GMI radiometers are used in this study as inputs to TLP-R2S, with separate models trained for each sensor. Furthermore, a set of hourly [ERA5](https://www.ecmwf.int/en/forecasts/datasets/reanalysis-datasets/era5) reanalysis products -- available at spatial resolution of 31km is used as ancillary input features to implicitly learn the relationships between land-atmosphere dynamical and thermodynamic state variables and their emissivity.\n",
+        "\n",
+        "\n",
+        "***SSMIS TBs***\n",
+        "*   Eleven frequency channels from 19 to 183 GHz, available in the GPM V07 data suite\n",
+        "\n",
+        "\n",
+        "***GMI TBs***\n",
+        "*   Thirteen frequency channels from 10 to 183 GHz\n",
+        "\n",
+        "***Atmospheric Variables***\n",
         "*   tclw = Total Column Cloud Liquid Water ($\\rm kg/m^2$)\n",
         "*   tciw = Total Column Cloud Ice Water ($\\rm kg/m^2$)\n",
         "*   tcwv = Total Column Water Vapor ($\\rm kg/m^2$)\n",
@@ -61,23 +71,19 @@
         "*   v10 = 10m v-component of wind ($\\rm m/s$)\n",
         "*   tcslw = Total Column Supercooled Liquid Water ($\\rm \\frac{kg}{m^2}$)\n",
         "*   tcw = Total Column Water ($\\rm \\frac{kg}{m^3}$)\n",
-        "*   cin = Convective Inhibition ($\\rm j/kg$)\n",
         "\n",
-        "**Surface Type Variables**\n",
+        "\n",
+        "***Surface Type Variables***\n",
         "*   lsm = LandSeaMask\n",
         "*   siconc = Sea Ice Area Fraction\n",
         "*   sd = Snow Depth ($\\rm m$)\n",
-        "*   asn = Snow Albedo (-)\n",
-        "*   rsn = Snow Density\n",
         "*   swvl1 = Volumetric Soil Water Layer1 (-)\n",
         "\n",
-        "**Orographic Variables**\n",
-        "* Elevation ($\\rm m$)\n",
-        "* Aspect\n",
+        "<span style=\"color:green;\"><b><i>1.1.2 Output Labels and Rates</i></b></span>\n",
         "\n",
-        "The GMI-CPR coincidences rely on the level-II CloudSat products (R05) including the 2C-PRECIP-COLUMN  and the 2C-SNOW-PROFILE that contains near-surface rain and snowfall rates.  To avoid ground-clutter contamination over complex elevated terrains, the near-surface snowfall rate is reported at 3rd (5th) radar bin above the oceans (land) at 720 (1200) m above the surface.\n",
+        "The ERA5 precipitation is used as a pre-training output feature. After pre-training, the model is post-trained on radar observations, with DPR providing the output rainfall labels and rates, while snowfall labels and rates are obtained from the CPR.\n",
         "\n",
-        "The 2A-DPR product, retrieved from Ku-band reflectivity, consists the near-surface precipitation phase and its intensity. It should be noted that the DPR algorithm uses precipitation phase at the lowest radar range gate uncontaminated by surface clutter, which may be 0.5--2.0 km above the surface (even over oceans).\n",
+        "More specifically, the near-surface rainfall data are from the 2A-DPR product, based on blind zone extrapolations. The CPR near-surface snowfall is from 2C-PRECIP-COLUMN and the 2C-SNOW-PROFILE, which provide precipitation phase and snowfall rate, respectively.\n",
         "\n",
         "Figure 1, represents the way the coincidences between GMI and CloudSat profiling radar (CPR) and GMI and DPR are collected. For more details with respect to the CloudSat and GMI please refer to ([2](https://journals.ametsoc.org/view/journals/hydr/22/7/JHM-D-20-0296.1.xml))"
       ]
@@ -102,8 +108,18 @@
         "id": "13a166a3-87a1-49f2-b332-7cccf6f091dd"
       },
       "source": [
-        "Resolution mismatches between input and output data sources can introduce information redundancy and exacerbate the inherent non-uniqueness of the inverse problem in precipitation retrievals. In this study, all retrievals are performed at the nominal footprint resolution of GMI pixels (5.1$\\times$13.2~km). After harmonization, the ERA5-labeled dataset includes approximately 7 million data points, of which 2.5 million are labeled as raining and 1 million as snowing. The CPR and DPR datasets consist of 240,800 and 2.8 million data points, respectively, with 86,000 (CPR) and 1 million (DPR) raining labels, and 34,000 (CPR) and 400,000 (DPR) snowing labels. For training on satellite data, DPR rainfall and CPR snowfall observations are employed to estimate precipitation rates, due to the known uncertainties associated with each dataset."
+        "To minimize redundancy and ambiguity arising from resolution mismatches between datasets, all retrievals are conducted at the native footprints of the SSMIS-S4 (GMI-S2) channels, with approximately 12.5$\\times$12.9 (5.1$\\times$13.2) km resolution. After harmonization, the analyzed ERA5-labeled SSMIS (GMI) data include approximately 10.4E+6 (7E+6) data points, of which 2.5E+6 (2.5E+6) are labeled as raining and 1.9E+6 (1E+6) as snowing. The CPR and DPR coincidence samples with SSMIS (GMI) after harmonization consist of 4.3E+6 (2.4E+5) and 40.6E+6 (2.9E+9) data points, respectively. The class imbalance ratio is adjusted to maintain the proportions of 3.2--1.3--1 (3.5--2.5--1) for clear--rain--snow, based on a climatological analysis of global ERA5 data."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> **Note:** The demo code implementation below is for the **GMI sensor** and is demonstrated on **partial datasets only**. The example is intended solely to illustrate the methodology and does not represent results from the complete database.\n"
+      ],
+      "metadata": {
+        "id": "UUNpPoMEWxKu"
+      },
+      "id": "UUNpPoMEWxKu"
     },
     {
       "cell_type": "markdown",
@@ -117,7 +133,7 @@
         "**Inputs for the phase detection and rate estimation are as follows:**\n",
         "> **Inputs:**\n",
         "\n",
-        "*   $\\text{TB} = X_{train}(:,1:13)$ (Brightness Temperature at 13 GMI channels [K])\n",
+        "*   $\\text{TBs} = X_{train}(:,1:13)$ (Brightness Temperature at 13 GMI channels [K])\n",
         "*   $ \\text{tciw} = X_{train}(:,14)$ (Cloud Liquid Water Path)\n",
         "*   $\\text{tclw} = X_{train}(:,15)$ (Cloud Ice Water Path)\n",
         "*   $\\text{tcwv} = X_{train}(:,16)$ (2-meter Air Temperature)\n",
@@ -127,28 +143,21 @@
         "*   $\\text{u10} = X_{train}(:,19)$ (10m u-component of wind)\n",
         "*   $ \\text{v10} = X_{train}(:,20)$ (10m v-component of wind)\n",
         "*   $\\text{skt} = X_{train}(:,21)$ (Skin Temperature)\n",
-        "*   $\\text{asn} = X_{train}(:,22)$ (Snow Albedo)\n",
-        "*   $\\text{rsn} = X_{train}(:,23)$ (Snow Density)\n",
-        "*   $\\text{cin} = X_{train}(:,24)$ (Convective Inhibition)\n",
         "\n",
-        "*   $\\text{sd} = X_{train}(:,25)$ (Snow Depth)\n",
-        "*   $ \\text{tcslw} = X_{train}(:,26)$ (Total Column Supercooled Liquid Water)\n",
-        "*   $\\text{tcw} = X_{train}(:,27)$ (Total Column Water)\n",
-        "*   $\\text{swvl1} = X_{train}(:,28)$ (Snow Albedo)\n",
-        "*   $\\text{lsm} = X_{train}(:,29)$ (Snow Density)\n",
-        "*   $\\text{siconc} = X_{train}(:,30)$ (Convective Inhibition)\n",
         "\n",
-        "*   $\\text{Latitude} = X_{train}(:,31)$ (Snow Depth)\n",
-        "*   $ \\text{Longitude} = X_{train}(:,32)$ (Total Column Supercooled Liquid Water)\n",
-        "*   $\\text{Month} = X_{train}(:,33)$ (Total Column Water)\n",
-        "*   $\\text{Day} = X_{train}(:,34)$ (Snow Albedo)\n",
-        "*   $\\text{Elevation} = X_{train}(:,35)$ (Snow Density)\n",
-        "*   $\\text{Aspect} = X_{train}(:,36)$ (Convective Inhibition)\n",
+        "*   $\\text{sd} = X_{train}(:,22)$ (Snow Depth)\n",
+        "*   $ \\text{tcslw} = X_{train}(:,23)$ (Total Column Supercooled Liquid Water)\n",
+        "*   $\\text{tcw} = X_{train}(:,24)$ (Total Column Water)\n",
+        "*   $\\text{swvl1} = X_{train}(:,25)$ (Volumetric Soil Water Layer1)\n",
+        "*   $\\text{lsm} = X_{train}(:,26)$ (LandSeaMask)\n",
+        "*   $\\text{siconc} = X_{train}(:,27)$ (Sea Ice Area Fraction)\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "> **Outputs:**\n",
         "\n",
-        "*   Output of the phase network is a vector containing three integer values **0 (no precipitation)**, **1 (rainfall)**, and **2 (snowfall)**\n",
+        "*   Output of the phase network is a vector containing either of the three integer values **0 (no precipitation)**, **1 (rainfall)**, and **2 (snowfall)**\n",
         "\n",
         "**For the precipitation estimation, the inputs and outputs are as follows:**\n",
         "\n",
@@ -160,16 +169,6 @@
         "\n",
         "*   Output of the estimation network is a vector containing rainfall/snowfall rate [$\\rm mm.hr^{-1}$]."
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Note: In the full dataset used for satellite finetuning, satellite rates corresponding to positive ERA5 precipitation are included, which may result in zero rain (DPR) or snow (CPR) rates. However, in the demo code, such zero-rate cases are excluded due to limited file size that can be uploaded on Github."
-      ],
-      "metadata": {
-        "id": "_ttJKMhnUtPP"
-      },
-      "id": "_ttJKMhnUtPP"
     },
     {
       "cell_type": "markdown",
@@ -195,22 +194,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5dH4MvG0pI3q",
-        "outputId": "d76e00c0-3503-4a85-c7b7-4c66bd8b4ed9"
+        "outputId": "9d0bcf34-0fec-48ae-a0a5-f0cd2f63eeb6"
       },
       "id": "5dH4MvG0pI3q",
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'Microwave_Precipitation_Retrievals_from_TLP-R2S'...\n",
-            "remote: Enumerating objects: 379, done.\u001b[K\n",
-            "remote: Counting objects: 100% (105/105), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (102/102), done.\u001b[K\n",
-            "remote: Total 379 (delta 62), reused 3 (delta 3), pack-reused 274 (from 4)\u001b[K\n",
-            "Receiving objects: 100% (379/379), 93.31 MiB | 22.18 MiB/s, done.\n",
-            "Resolving deltas: 100% (160/160), done.\n",
+            "remote: Enumerating objects: 445, done.\u001b[K\n",
+            "remote: Counting objects: 100% (107/107), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (44/44), done.\u001b[K\n",
+            "remote: Total 445 (delta 88), reused 63 (delta 63), pack-reused 338 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (445/445), 107.26 MiB | 13.09 MiB/s, done.\n",
+            "Resolving deltas: 100% (204/204), done.\n",
             "Updating files: 100% (28/28), done.\n"
           ]
         }
@@ -218,7 +217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "3055bccb-7543-4c53-ae95-e7a0063d30a6",
       "metadata": {
         "id": "3055bccb-7543-4c53-ae95-e7a0063d30a6"
@@ -247,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "c7d29d58-31aa-4200-be5c-77fe0305af48",
       "metadata": {
         "id": "c7d29d58-31aa-4200-be5c-77fe0305af48"
@@ -306,7 +305,7 @@
         "id": "oPJkoV0990vN"
       },
       "id": "oPJkoV0990vN",
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -325,7 +324,7 @@
         "id": "t-BM8NSR2Kaz"
       },
       "id": "t-BM8NSR2Kaz",
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
