--- a/TLP-R2S_demo.ipynb
+++ b/TLP-R2S_demo.ipynb
@@ -197,7 +197,7 @@
         "outputId": "405c2822-ad6d-447c-fa3c-a279f1db79cf"
       },
       "id": "5dH4MvG0pI3q",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,7 +227,7 @@
         }
       },
       "id": "kjK_NsxYszHP",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "3055bccb-7543-4c53-ae95-e7a0063d30a6",
       "metadata": {
         "id": "3055bccb-7543-4c53-ae95-e7a0063d30a6"
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "c7d29d58-31aa-4200-be5c-77fe0305af48",
       "metadata": {
         "id": "c7d29d58-31aa-4200-be5c-77fe0305af48"
@@ -339,7 +339,7 @@
         "id": "oPJkoV0990vN"
       },
       "id": "oPJkoV0990vN",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -358,7 +358,7 @@
         "id": "t-BM8NSR2Kaz"
       },
       "id": "t-BM8NSR2Kaz",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -390,7 +390,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Figure 3 displays precipitation retrievals for a snowstorm and a rainstorm observed by GMI orbit 027551 over the Southern and Indian Oceans. The first column shows results using only $n_e = 90$ boosting rounds, trained exclusively on ERA5 precipitation flags and rates. When additional $n_s$ boosting trees are incrementally added to capture the information content of satellite data pairs, finer spatial details and higher intensity values emerge. Concurrently, low-intensity precipitation at the storm peripheries, initially shaped by learning from the coarse resolution of ERA5, gradually diminishes, as B-RAINS adapts and partially ``forgets'' the low-resolution ERA5 data in favor of a higher fidelity to satellite information."
+        "Figure 3 (first row) illustrates the effect of incremental learning on the GMI retrieval of a rainstorm that occurred along the tropical cyclone track over the southern Indian Ocean. The left panel shows the $T_B$ at 37 GHz, highlighting emission patterns that delineate organized convective frontal cells followed by stratiform trailing cloud decks. The TLP-R2S retrievals, trained solely on ERA5 samples (panel c), with $n_e = 90$ boosting rounds, produce a relatively smooth rainfall field similar to the ERA5 reference (panel b) that lacks the fine-scale convective features evident in the observed TB field. When additional $n_s$ boosting rounds are introduced after freezing to incorporate the information content of satellite observations (panels~c--e), the retrievals exhibit enhanced spatial detail and higher intensity values, effectively capturing the convective organization of the storm.\n",
+        "\n",
+        "Figure 3 (second row) presents an example of snowstorm retrievals using SSMIS observations over the region south of Cape Agulhas and the Greenland Sea. Compared with the rainfall case, the improvement in spatial detail is modest; however, mild sharpening remains evident. Notably, a portion of the storm in the southeast part of the scene, with a band scattering signatures at 150 GHz, is retrieved, whereas ERA5 does not predict any surface snowfall."
       ],
       "metadata": {
         "id": "p3Z8jyXktlGg"
@@ -401,7 +403,7 @@
       "cell_type": "markdown",
       "source": [
         "<div align=\"center\">\n",
-        "  <img src=\"https://github.com/Buddha-subedi/Microwave_Precipitation_Retrievals_from_BKnoT-PR/blob/main/images/Fig_03.png?raw=1\" alt=\"Impact of Transfer Learning\" width=\"800\"/><br/>\n",
+        "  <img src=\"https://i.postimg.cc/dt6YcXmP/Fig-03.png\" alt=\"Impact of Transfer Learning\" width=\"800\"/><br/>\n",
         "  <em>\n",
         "    <strong>Figure 3.</strong> The impact of incremental learning on retrievals of a rain storm (a-e) captured by GMI orbit 027551 on January 3, 2019; and a snow storm (f-j) observed by SSMIS orbit 099097 on January 1, 2023 -- where n_e and n_s are boosting rounds before and after freezing, respectively.\n",
         "  </em>\n",
@@ -507,7 +509,7 @@
         }
       },
       "id": "1SxqXu_WwiJP",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -632,7 +634,7 @@
         }
       },
       "id": "dqH7_PjkjzUY",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,7 +746,7 @@
         "outputId": "5d80e78a-a675-48fe-ab78-d4251bd28f85"
       },
       "id": "skTIt2Jj1jiR",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,7 +848,7 @@
         }
       },
       "id": "vK9H_wpBZfhd",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -893,7 +895,7 @@
         "outputId": "4e93ed69-de5c-4993-b4e6-41db18e1e2b8"
       },
       "id": "TTiOTotI31DZ",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -972,7 +974,7 @@
         "outputId": "77c3654e-71c9-4873-ce14-e383c8c8102b"
       },
       "id": "x1C5n_WSeh4S",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1091,7 +1093,7 @@
         "outputId": "44e0bcf6-d02d-4f34-86bf-03a977c10bab"
       },
       "id": "iAm89U2qEqbH",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1240,7 +1242,7 @@
         "outputId": "781b5de5-485f-43e7-b31d-b3a152654a26"
       },
       "id": "PauKCtMBHbYV",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1323,7 +1325,7 @@
         "outputId": "88fd5a53-9950-4e4d-9a7c-20e0af849538"
       },
       "id": "5aE7C_SfICci",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1436,7 +1438,7 @@
         "outputId": "cb3efe3d-9dd4-4262-e837-e5b79040c554"
       },
       "id": "eDQLby-4IZG6",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1586,7 +1588,7 @@
         "outputId": "87caf3ac-b8cb-4800-9bee-d00086002ecc"
       },
       "id": "1oEmO1XVLfm0",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1642,7 +1644,7 @@
         "id": "KnIQwcPMsXml"
       },
       "id": "KnIQwcPMsXml",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1658,7 +1660,7 @@
         "outputId": "897566b6-e080-43ac-9c5c-70c9a89bb743"
       },
       "id": "d4CrsjbqHSr_",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1686,7 +1688,7 @@
         "outputId": "852f33e4-2ddb-46f2-8355-5e041283d8c3"
       },
       "id": "1hNg1Ov-8YJb",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1772,7 +1774,7 @@
         "outputId": "67cdf734-c149-48e2-8614-f051b2477948"
       },
       "id": "Pgf9YBS_8L6h",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1861,7 +1863,7 @@
         "outputId": "0a369106-459d-4888-a968-030c57fc670f"
       },
       "id": "KDCNjQ3z8rx0",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2073,7 +2075,7 @@
         "outputId": "00eefaae-1175-4021-fece-d1d452908a94"
       },
       "id": "az14BGP492CL",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
