--- a/TLP-R2S_demo.ipynb
+++ b/TLP-R2S_demo.ipynb
@@ -7,7 +7,7 @@
         "id": "5d842c86-c045-4eae-a4e8-1286a08ae7c6"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Buddha-subedi/Microwave_Precipitation_Retrievals_from_TLP-R2S/blob/main/TLP-R2S_demo.ipynb)"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Buddha-subedi/PMWPrecip_TLP-R2S/blob/main/TLP-R2S_demo.ipynb)"
       ]
     },
     {
@@ -186,30 +186,31 @@
       "source": [
         "# Clone the repo\n",
         "import os\n",
-        "!git clone https://github.com/Buddha-subedi/Microwave_Precipitation_Retrievals_from_TLP-R2S.git\n",
-        "os.chdir(\"Microwave_Precipitation_Retrievals_from_TLP-R2S\")"
+        "!git clone https://github.com/Buddha-subedi/PMWPrecip_TLP-R2S.git\n",
+        "os.chdir(\"PMWPrecip_TLP-R2S\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5dH4MvG0pI3q",
-        "outputId": "405c2822-ad6d-447c-fa3c-a279f1db79cf"
+        "outputId": "3749fe23-9f11-4427-f9a2-b496d1778d9d"
       },
       "id": "5dH4MvG0pI3q",
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'Microwave_Precipitation_Retrievals_from_TLP-R2S'...\n",
-            "remote: Enumerating objects: 495, done.\u001b[K\n",
-            "remote: Counting objects: 100% (157/157), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (94/94), done.\u001b[K\n",
-            "remote: Total 495 (delta 118), reused 63 (delta 63), pack-reused 338 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (495/495), 112.17 MiB | 30.64 MiB/s, done.\n",
-            "Resolving deltas: 100% (234/234), done.\n"
+            "Cloning into 'PMWPrecip_TLP-R2S'...\n",
+            "remote: Enumerating objects: 521, done.\u001b[K\n",
+            "remote: Counting objects: 100% (183/183), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (120/120), done.\u001b[K\n",
+            "remote: Total 521 (delta 131), reused 63 (delta 63), pack-reused 338 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (521/521), 121.88 MiB | 19.41 MiB/s, done.\n",
+            "Resolving deltas: 100% (247/247), done.\n",
+            "Updating files: 100% (26/26), done.\n"
           ]
         }
       ]
